--- a/src/components/Card/Card.module.scss
+++ b/src/components/Card/Card.module.scss
@@ -5,15 +5,13 @@
   width: 360px;
   height: 510px;
   margin: 10px;
-  padding: 6px 0px 0px;
+  // padding: 6px 0px 0px;
   border-radius: 10px;
-  // border: 2px solid cadetblue;
   z-index: 0;
-  // background-color: #B7B9D0;
-  // background-color: #B7B9D0;
-  background-color: #B7B9D0;
-  border-left: 10px solid cadetblue;
-  
+  background-color: #b7b9d0;
+  border: 10px solid #0684d3;
+  border-left: 10px solid #0684d3; //cadetblue;
+
   &::before {
     content: "";
     position: absolute;
@@ -21,18 +19,18 @@
     left: 26%;
     width: 18em; //300px;
     height: 18em;
-    background-image: url('../../assets/patterns/pokeball_rot.svg');
+    background-image: url("../../assets/patterns/pokeball_rot.svg");
     background-repeat: no-repeat;
     background-position-x: 0px;
     background-position-y: 0px;
     background-size: 100%;
     z-index: 1;
-    filter: invert(99%) sepia(1%) saturate(2%) hue-rotate(37deg) brightness(108%) contrast(101%) opacity(20%);
-    // border: 2px solid lime;
+    filter: invert(99%) sepia(1%) saturate(2%) hue-rotate(37deg) brightness(108%)
+      contrast(101%) opacity(20%);
   }
 
   &:hover {
-    border-left: 10px solid #e847ee;
+    border: 10px solid #4efa6b;
   }
 
   .cardWrapper {
@@ -47,53 +45,74 @@
     background-size: contain;
     background-repeat: no-repeat;
     z-index: 2;
-
+    padding: 8px;
+    gap: 4px;
     // border: 2px solid red;
-    
+
     .imgCard {
       position: relative;
       display: flex;
       flex-direction: column;
-      // justify-content: center;
       margin: 0px auto;
       align-self: center;
       border-top-left-radius: 12px;
       border-top-right-radius: 12px;
-      width: 95%;
+      width: 100%;
       height: 240px;
       background-color: #67686ea6;
-      border: 3px solid #67686ea6;
-      
-      img {
+      // border: 2px solid #0684d3;
+
+      .showcaseImg {
         position: relative;
         width: auto;
         height: 100%;
         border-radius: 10px;
+        border-bottom-left-radius: 0px;
+        border-bottom-right-radius: 0px;
         object-fit: cover;
-        
+
         &:hover {
-          transform: scale(.95);
+          transform: scale(0.95);
           object-fit: contain;
         }
       }
-      
-      figcaption {
+
+      .figcaption {
         position: absolute;
         bottom: 0px;
         width: 100%;
         font-size: 1rem;
         background: #46464680;
         color: white;
-        padding-left: 10px;
-        // border: 2px solid lime;
+        padding: 5px 10px;
       }
     }
-    
+
+    .badgeKingdom {
+      position: absolute;
+      top: 4px;
+      right: 4px;
+      font-size: 1rem;
+      width: 6rem;
+      opacity: 90%;
+      border-radius: 6px;
+    }
+
     .midCard {
+      display: flex;
+      justify-content: center;
+      align-items: center;
       width: 95%;
       height: auto;
       font-size: 1.2rem;
-      // border: 2px solid blue;
+
+      // &::before,
+      // &::after {
+      //   content: "";
+      //   border: 2px solid red;
+      //   width: auto;
+      //   border-radius: 50%;
+      // }
     }
   }
 
@@ -102,34 +121,31 @@
     flex-direction: column;
     width: 100%;
     height: 100%;
-    padding: 10px;
+    padding: 8px;
     background-color: #dae3f5a9;
-    // margin-top: 10px;
     z-index: 2;
-    border-radius: 26px;
-    border-bottom-left-radius: 0px;
-    border-bottom-right-radius: 10px;
-    // border: 2px solid red;
+    // border-top-left-radius: 0px;
+    border-top-right-radius: 20px;
+    // border-bottom-left-radius: 0px;
+    // border-bottom-right-radius: 6px;
 
     div {
       display: inline-flex;
       align-items: baseline;
-      
-    // border: 2px solid blue;
     }
 
     dt {
       display: inline;
-      font-size: 14px;
+      font-size: 16px;
 
       &:after {
-        content: ':';
+        content: ":";
         margin: 0px 5px;
       }
     }
 
     dd {
-      font-size: 12px;
+      font-size: 14px;
     }
   }
 }
