--- a/src/components/MainContent/MainContent.module.scss
+++ b/src/components/MainContent/MainContent.module.scss
@@ -1,23 +1,29 @@
 .form {
   display: flex;
-  // align-items: center;
   margin: 5px 0px;
-  // height: 50px;
   border: 2px solid #655f74;
   border-radius: 100px;
+  padding: 2px;
+  background-color: #fff;
 
-  input {
+  &:focus-within {
+    border: 2px solid #0684d3;
+  }
+
+  input[type="text"] {
     resize: none;
-    padding: 10px 24px 10px;
-    display:inline-block;
+    padding: 10px 20px;
+    display: inline-block;
     width: 400px;
     height: 100%;
     border: none; //2px solid #6f6e78;
     border-top-left-radius: 100px;
     border-bottom-left-radius: 100px;
+    outline: none;
   }
 
   button {
+    position: relative;
     width: 52px;
     color: white;
     background-color: #8629dd;
@@ -36,7 +42,7 @@
     .iconButton {
       transition: transform 200ms ease-in-out;
 
-      &:hover{
+      &:hover {
         transform: scale(1.3);
       }
     }
@@ -47,18 +53,15 @@
   content: "";
   // border: 1px solid deeppink;
 
-  // p {
-  //   margin-left: 2em;
-  // }
+  p {
+    margin-left: 2em;
+  }
 }
 
-.mainContent{
+.mainContent {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
   align-items: center;
   justify-content: center;
-  // padding-top: 70px;
-
-  // border: 1px solid orange;public
 }
